--- a/Pod/Assets/SCStoryboard.storyboard
+++ b/Pod/Assets/SCStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="0sJ-qu-8NN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="0sJ-qu-8NN">
     <dependencies>
         <deployment version="2048" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -3051,14 +3051,14 @@ Please try again later.</string>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="USA / Canada" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="o33-mN-6e9">
-                                                    <rect key="frame" x="62" y="0.0" width="223" height="43"/>
+                                                    <rect key="frame" x="60" y="0.0" width="225" height="43"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </label>
                                                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="flag1" id="2nX-W6-ruF">
-                                                    <rect key="frame" x="15" y="5" width="32" height="32"/>
+                                                    <rect key="frame" x="15" y="11" width="30" height="20"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                 </imageView>
                                             </subviews>
@@ -11296,13 +11296,13 @@ Remove search filter?</string>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hulk Hoogan" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UuN-3k-5jB">
                                                 <rect key="frame" x="58" y="10" width="234" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ended at 18:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NUx-8I-Jeg">
                                                 <rect key="frame" x="8" y="77" width="284" height="15"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
@@ -12206,38 +12206,38 @@ Remove search filter?</string>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rb5-Sg-fkH" userLabel="ButtonBar">
                                                 <rect key="frame" x="0.0" y="26" width="320" height="38"/>
                                                 <subviews>
-                                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sx5-BF-zmK">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sx5-BF-zmK">
                                                         <rect key="frame" x="48" y="0.0" width="224" height="38"/>
                                                         <subviews>
-                                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yJ2-q9-1Zx" userLabel="Button Add from Galary">
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yJ2-q9-1Zx" userLabel="Button Add from Galary">
                                                                 <rect key="frame" x="0.0" y="7" width="29" height="24"/>
                                                                 <state key="normal" image="ico_attachement_blue"/>
                                                                 <connections>
                                                                     <action selector="addFromAlbum:" destination="J6V-Kq-02b" eventType="touchUpInside" id="hED-Ru-zuE"/>
                                                                 </connections>
                                                             </button>
-                                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FLl-aM-SSJ">
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FLl-aM-SSJ">
                                                                 <rect key="frame" x="44" y="4" width="30" height="30"/>
                                                                 <state key="normal" image="ico_cam-24x24"/>
                                                                 <connections>
                                                                     <action selector="addImage:" destination="J6V-Kq-02b" eventType="touchUpInside" id="GRS-dW-U5f"/>
                                                                 </connections>
                                                             </button>
-                                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Pt-d1-DFU">
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Pt-d1-DFU">
                                                                 <rect key="frame" x="94" y="4" width="30" height="30"/>
                                                                 <state key="normal" image="btn_ico_video"/>
                                                                 <connections>
                                                                     <action selector="addVideo:" destination="J6V-Kq-02b" eventType="touchUpInside" id="ajE-6q-8HF"/>
                                                                 </connections>
                                                             </button>
-                                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xAB-g0-9fH">
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xAB-g0-9fH">
                                                                 <rect key="frame" x="144" y="4" width="30" height="30"/>
                                                                 <state key="normal" image="ico_geolocation-24x24"/>
                                                                 <connections>
                                                                     <action selector="addLocation:" destination="J6V-Kq-02b" eventType="touchUpInside" id="Wg1-6v-R1q"/>
                                                                 </connections>
                                                             </button>
-                                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bmq-9j-xeG">
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bmq-9j-xeG">
                                                                 <rect key="frame" x="194" y="4" width="30" height="30"/>
                                                                 <state key="normal" image="ico_mic"/>
                                                                 <connections>
@@ -13362,10 +13362,10 @@ Remove search filter?</string>
         <image name="btn_send_message_grey" width="66" height="28"/>
         <image name="btn_takecall_hover" width="135" height="50"/>
         <image name="btn_video_offer" width="28" height="28"/>
-        <image name="flag1" width="32" height="32"/>
+        <image name="flag1" width="30" height="20"/>
         <image name="ico_arrow_left" width="27" height="21"/>
         <image name="ico_arrow_right" width="27" height="21"/>
-        <image name="ico_attachement_blue" width="30" height="30"/>
+        <image name="ico_attachement_blue" width="29" height="24"/>
         <image name="ico_avatar.png" width="30" height="30"/>
         <image name="ico_back_kamera" width="43" height="26"/>
         <image name="ico_bookmark" width="10" height="17"/>
@@ -13387,13 +13387,13 @@ Remove search filter?</string>
         <image name="ico_expand" width="30" height="30"/>
         <image name="ico_footer_dialpad_01" width="25" height="25"/>
         <image name="ico_footer_phonebook_contacts_01" width="30" height="30"/>
-        <image name="ico_friendcaller-color" width="24" height="24"/>
+        <image name="ico_friendcaller-color" width="29" height="29"/>
         <image name="ico_front_kamera" width="43" height="26"/>
         <image name="ico_geolocation-24x24" width="30" height="30"/>
         <image name="ico_group" width="30" height="30"/>
         <image name="ico_hangup" width="30" height="30"/>
         <image name="ico_image" width="30" height="30"/>
-        <image name="ico_location_normal" width="30" height="30"/>
+        <image name="ico_location_normal" width="39" height="39"/>
         <image name="ico_mic" width="30" height="30"/>
         <image name="ico_micro" width="30" height="30"/>
         <image name="ico_micro_mute" width="30" height="30"/>
@@ -13402,7 +13402,7 @@ Remove search filter?</string>
         <image name="ico_msg_white-20x20" width="20" height="20"/>
         <image name="ico_no_kamera" width="43" height="26"/>
         <image name="ico_play" width="11" height="16"/>
-        <image name="ico_read" width="14" height="14"/>
+        <image name="ico_read" width="15" height="15"/>
         <image name="ico_record" width="17" height="17"/>
         <image name="ico_record_again" width="19" height="22"/>
         <image name="ico_richmessaging_03" width="28" height="28"/>
