--- a/Pod/Assets/SCBroadcast.storyboard
+++ b/Pod/Assets/SCBroadcast.storyboard
@@ -739,7 +739,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ywt-pI-zs8" userLabel="videoView" customClass="SCVLCVideoPlayerView">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="controlsView" destination="hxA-R2-Pxw" id="MPd-lb-ri6"/>
@@ -748,7 +748,7 @@
                                 </connections>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hxA-R2-Pxw" userLabel="controlsView">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lIh-pX-n4t" userLabel="Close Button">
                                         <rect key="frame" x="317" y="28" width="30" height="30"/>
@@ -762,7 +762,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5cP-Ep-dgF">
-                                        <rect key="frame" x="157.5" y="293.5" width="60" height="60"/>
+                                        <rect key="frame" x="157.5" y="303.5" width="60" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="60" id="ei4-DB-87S"/>
                                             <constraint firstAttribute="height" constant="60" id="ixy-9q-MAT"/>
@@ -775,15 +775,18 @@
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="play:" destination="Ywt-pI-zs8" eventType="touchUpInside" id="WqY-oa-G4e"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OlM-NP-IUh" userLabel="infoText">
-                                        <rect key="frame" x="10" y="537" width="355" height="0.0"/>
+                                        <rect key="frame" x="10" y="547" width="355" height="0.0"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MmX-Jz-tsm" userLabel="infoView">
-                                        <rect key="frame" x="10" y="547" width="355" height="100"/>
+                                        <rect key="frame" x="10" y="557" width="355" height="100"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uBK-bw-6HV">
                                                 <rect key="frame" x="10" y="10" width="40" height="40"/>
@@ -811,7 +814,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" white="1" alpha="0.5" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="NUx-8I-Jeg" secondAttribute="bottom" constant="8" id="6gP-HX-Pd9"/>
                                             <constraint firstAttribute="height" constant="100" id="FBM-Cv-OiZ"/>
@@ -836,7 +839,7 @@
                                 <constraints>
                                     <constraint firstItem="5cP-Ep-dgF" firstAttribute="centerY" secondItem="hxA-R2-Pxw" secondAttribute="centerY" id="0yy-gz-MPN"/>
                                     <constraint firstAttribute="trailing" secondItem="MmX-Jz-tsm" secondAttribute="trailing" constant="10" id="7yd-SH-b8q"/>
-                                    <constraint firstAttribute="bottom" secondItem="MmX-Jz-tsm" secondAttribute="bottom" id="8Bt-7M-lDU"/>
+                                    <constraint firstAttribute="bottom" secondItem="MmX-Jz-tsm" secondAttribute="bottom" constant="10" id="8Bt-7M-lDU"/>
                                     <constraint firstItem="MmX-Jz-tsm" firstAttribute="leading" secondItem="hxA-R2-Pxw" secondAttribute="leading" constant="10" id="9tJ-o6-s09"/>
                                     <constraint firstItem="5cP-Ep-dgF" firstAttribute="centerX" secondItem="hxA-R2-Pxw" secondAttribute="centerX" id="J52-Tr-CAh"/>
                                     <constraint firstItem="lIh-pX-n4t" firstAttribute="top" secondItem="hxA-R2-Pxw" secondAttribute="topMargin" constant="20" id="SKk-tW-7cL"/>
@@ -880,9 +883,9 @@
                             <constraint firstItem="xhN-wb-NSL" firstAttribute="centerX" secondItem="mCA-Ba-0AV" secondAttribute="centerX" id="CFr-oL-PVa"/>
                             <constraint firstItem="xhN-wb-NSL" firstAttribute="centerY" secondItem="mCA-Ba-0AV" secondAttribute="centerY" id="Gct-5j-JOR"/>
                             <constraint firstItem="gTg-ka-aU2" firstAttribute="top" secondItem="Ywt-pI-zs8" secondAttribute="bottom" id="GsM-xx-Zpi"/>
-                            <constraint firstItem="Ywt-pI-zs8" firstAttribute="top" secondItem="oMI-Xw-ELm" secondAttribute="bottom" id="LwU-kc-rpB"/>
+                            <constraint firstItem="Ywt-pI-zs8" firstAttribute="top" secondItem="oMI-Xw-ELm" secondAttribute="bottom" constant="-20" id="LwU-kc-rpB"/>
                             <constraint firstItem="hxA-R2-Pxw" firstAttribute="leading" secondItem="mCA-Ba-0AV" secondAttribute="leading" id="jca-p8-m1s"/>
-                            <constraint firstItem="hxA-R2-Pxw" firstAttribute="top" secondItem="oMI-Xw-ELm" secondAttribute="bottom" id="lQv-sq-ElO"/>
+                            <constraint firstItem="hxA-R2-Pxw" firstAttribute="top" secondItem="oMI-Xw-ELm" secondAttribute="bottom" constant="-20" id="lQv-sq-ElO"/>
                             <constraint firstItem="Ywt-pI-zs8" firstAttribute="leading" secondItem="mCA-Ba-0AV" secondAttribute="leading" id="m4h-3P-wUg"/>
                         </constraints>
                     </view>
@@ -904,7 +907,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-26859" y="-131446"/>
+            <point key="canvasLocation" x="-26859.5" y="-131446.5"/>
         </scene>
         <!--Your Location-->
         <scene sceneID="eZI-Za-1Gd">
